turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: not found: value color
        if(i==color.length-1) {
              ^LangtonsAnt:20: error: type mismatch;
 found   : Int
 required: java.awt.Color
          setCouleurSol(i+1)
                         ^LangtonsAnt:27: error: not found: value color
        if(i==color.length-1) {
              ^LangtonsAnt:32: error: type mismatch;
 found   : Int
 required: java.awt.Color
          setCouleurSol(i+1)
                         ^